--- a/BNITapCash/Properties/Settings.settings
+++ b/BNITapCash/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="IPAddressServer" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">localhost</Value>
     </Setting>
     <Setting Name="RememberMe" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
